# s23_universityaspirations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/uni_asp/: constants.py  main.py  sanity_check.py  utils.py
src/uni_asp/analysis/: get_inference_table.py  risk_analysis.py
src/uni_asp/modelling/: inference.py  model_pre.py  training.py
src/uni_asp/preprocessing/: clean_upn.py  cohort.py  extract_col_name.py  format_columns.py  format_ethnicity.py  format_gender.py  format_incare.py  format_school.py  format_sen.py  get_score_pct.py  preprocess_data.py  read_excel_csv.py  resolve_duplicates.py
tests/: utils.py
tests/uni_asp/preprocessing/: test_cohort.py
